dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)

dnl Checks for programs.

dnl Checks for libraries.
AC_CHECK_LIB(pcap, pcap_open_live)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/file.h sys/ioctl.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_CHECK_FUNCS(pcap_dump_flush)

AC_OUTPUT(Makefile)
